trying to add background img attempt #1

--- a/style.css
+++ b/style.css
@@ -16,3 +16,6 @@ p {
 .list h3{
   padding-left: 25px
 }
+body {
+    background-image: url("City-Bridge-Landscape-03-Z-The-San-Francisco-Oakland-Bay-Bridge--800x540.jpg");
+}
