--- a/style.css
+++ b/style.css
@@ -17,5 +17,5 @@ p {
   padding-left: 25px
 }
 body {
-    background-image: url("City-Bridge-Landscape-03-Z-The-San-Francisco-Oakland-Bay-Bridge--800x540.jpg");
+    background-image: url("http://www.artprintdecor.com/uploads/City-Bridge-Landscape-03-Z-The-San-Francisco-Oakland-Bay-Bridge--800x540.jpg");
 }
