--- a/style.css
+++ b/style.css
@@ -19,3 +19,6 @@ p {
 body {
     background-image: url("http://www.artprintdecor.com/uploads/City-Bridge-Landscape-03-Z-The-San-Francisco-Oakland-Bay-Bridge--800x540.jpg");
 }
+body {
+    background-repeat: no-repeat;
+}
