--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("http://www.artprintdecor.com/uploads/City-Bridge-Landscape-03-Z-The-San-Francisco-Oakland-Bay-Bridge--800x540.jpg");
+  background-image: url("https://ssl.c.photoshelter.com/img-get2/I0000Hj3oY61piYk/fit=1000x750/San-Francisco-Bay-Bridge.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -17,4 +17,6 @@ p {
 .list h3{
   padding-left: 25px
 }
-
+h1 {
+    background-color: ;
+}
