different backround image

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("https://ssl.c.photoshelter.com/img-get2/I0000Hj3oY61piYk/fit=1000x750/San-Francisco-Bay-Bridge.jpg");
+  background-image: url("https://a.travel-assets.com/findyours-php/viewfinder/images/res60/22000/22323-Golden-Gate-Bridge.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
