--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ p {
 }
 
 .intro{
-  margin-left: 11%;
-  margin-right: 11%;
+  margin-left: 18%;
+  margin-right: 18%;
+  background-color: #42a5f5 blue lighten-1;
 }
 
