--- a/style.css
+++ b/style.css
@@ -21,6 +21,6 @@ p {
 .intro{
   margin-left: 18%;
   margin-right: 18%;
-  background-color: #42a5f5 blue lighten-1;
+  background-color: #42a5f5;
 }
 
