--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 h1 {
   font-size: 45px;
   font-color: black;
+  background-color: #82b1ff99
 
 }
 p {
@@ -16,6 +17,7 @@ p {
 }
 .list h3{
   padding-left: 25px;
+  background-color: #82b1ff99
 }
 
 .intro{
