--- a/style.css
+++ b/style.css
@@ -7,7 +7,8 @@ h1 {
   font-size: 45px;
   font-color: black;
   background-color: #82b1ff99;
-
+  margin-left: 18%;
+  margin-right: 18%;
 }
 p {
   font-size: 22px;
@@ -23,6 +24,9 @@ p {
 .intro{
   margin-left: 18%;
   margin-right: 18%;
+  background-color: #82b1ff99;
+}
+ul{
   background-color: #82b1ff99;
 }
 
