--- a/style.css
+++ b/style.css
@@ -7,10 +7,11 @@ h1 {
   font-size: 45px;
   margin-left: 33%;
   margin-right: 33%;
+  text-color: white;
 }
 p {
   font-size: 22px;
-  font-color: white;
+  text-color: white;
 }
 .container{
   display: flex;
@@ -24,5 +25,6 @@ p {
   margin-right: 18%;
 }
 ul{
+  text-color: white;
 }
 
